[tool.poetry]
name = "keenetic-gist-backup"
version = "0.0.0"
description = ""
authors = ["BananaLoaf <bananaloaf@protonmail.com>"]
readme = "README.md"
packages = [{include = "keenetic_gist_backup"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
typer = "^0.12.5"
loguru = "^0.7.2"
pygithub = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
keenetic-gist-backup = "keenetic_gist_backup.__main__:main"
